Consulta, registro consulta

--- a/S7DJIMENEZB/ConsultaRegistro.xaml
+++ b/S7DJIMENEZB/ConsultaRegistro.xaml
@@ -4,9 +4,14 @@
              x:Class="S7DJIMENEZB.ConsultaRegistro">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label Text="Lista de estudiantes"/>
+            <ListView x:Name="listUsuarios" ItemSelected="listUsuarios_ItemSelected">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding Name}" Detail="{Binding User}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
