--- a/S7DJIMENEZB/Login.xaml
+++ b/S7DJIMENEZB/Login.xaml
@@ -10,6 +10,7 @@
 
             <Button x:Name="btnIniciar" Text="Iniciar sesion" Clicked="btnIniciar_Clicked"/>
             <Button x:Name="btnRegistrar" Text="Registro" Clicked="btnRegistrar_Clicked"/>
+            <Button x:Name="btnConsultaReg" Text="Consultar Registro" Clicked="btnConsultaReg_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
